#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl_hdf2psana
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-09-09 
2014-06-10 David Schneider
- convert fixed and vlen ndarrays in hdf5 files into the event store.
- refactor with Translator package
  move Translator NDArrayParameters class here
- add schema constants that are shared between both packages
- track ticket  #308 (for reading ndarrays into psana).

Tag: V00-09-08
2014-06-05 David Schneider
- fix trac #305 https://pswww.slac.stanford.edu/trac/psdm/ticket/305
  pass pvname when storing epics pv to deal with pv's having the same
  pvId - right thing to do for psana-translate, should be Ok for
  older o2o-translated files.

Tag: V00-09-07
2014-05-08 David Schneider
- regenerate for psddldata V01-00-09.
- track ticket 300.

Tag: V00-09-06
2014-05-03 David Schneider
- regenerate for psddldata V01-00-08.
- track ticket 295.

Tag: V00-09-05
2014-03-10 David Schneider
- regenerate for psddldata V01-00-06.
- track ticket 278.

Tag: V00-09-04
2014-03-10 David Schneider
- regenerate for psddldata V01-00-05.

Tag: V00-09-03
2014-03-04 Andy
- forgot to add instantiation of Oceanoptics::DataV1_v0<ConfigV2>

Tag: V00-09-02
2014-03-04 Andy
- regenerate whole thing from psddldata V01-00-04
- trac ticket #276

Tag: V00-09-01
2014-02-12 David Schneider
- regenerate whole thing from psddldata V01-00-03 with psddl V00-13-06

Tag: V00-09-00
2014-01-13 Andy Salnikov
- support for aliases

Tag: V00-08-03
2014-01-10 Andy Salnikov
- oceanoptics: add special dataset "corrSpectra" like in old translator

Tag: V00-08-02
2014-01-07 Andy Salnikov
- regenerate whole thing from psddldata V01-00-01 with psddl V00-13-02
- fix for Acqiris::TdcData writing
